// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<box /> updates 1`] = `
"┌─root-box─────────────────────────────────────────────────┐
│┌─first-label────────────────────────────────────────────┐│
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
│└────────────────────────────────────────────────────────┘│
└──────────────────────────────────────────────────────────┘"
`;

exports[`<box /> updates 2`] = `
"┌─root-box─────────────────────────────────────────────────┐
│@@second-label@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@│
│@                                                        @│
│@                                                        @│
│@                                                        @│
│@                                                        @│
│@                                                        @│
│@                                                        @│
│@                                                        @│
│@                                                        @│
│@                                                        @│
│@                                                        @│
│@                                                        @│
│@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@│
└──────────────────────────────────────────────────────────┘"
`;

exports[`<box /> updates 3`] = `
"┌─root-box─────────────────────────────────────────────────┐
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘"
`;
